kubernetes/overlays/homelab/infrastructure/vault-operator/resources/networkpolicy-vault-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-metrics-from-prometheus
  namespace: vault
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      vault_cr: vault
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9091
          protocol: TCP
